--- a/ranking.html
+++ b/ranking.html
@@ -179,7 +179,7 @@
                         <div class="ranking-item">
                             <span class="rank-number">1</span>
                             <div class="debater-info">
-                                <img src="assets/debater_ranzt.png" alt="Ranzt" class="debater-avatar">
+                                <img src="assets/IMG_7175.jpeg" alt="Ranzt" class="debater-avatar">
                                 <span class="debater-name">Ranzt</span>
                             </div>
                             <span class="debater-record">1-0</span>
@@ -187,7 +187,7 @@
                         <div class="ranking-item">
                             <span class="rank-number">2</span>
                             <div class="debater-info">
-                                <img src="assets/debater_hiroo.png" alt="Hiroo" class="debater-avatar">
+                                <img src="assets/IMG_7176.jpeg" alt="Hiroo" class="debater-avatar">
                                 <span class="debater-name">Hiroo</span>
                             </div>
                             <span class="debater-record">1-0</span>
@@ -195,7 +195,7 @@
                         <div class="ranking-item">
                             <span class="rank-number">3</span>
                             <div class="debater-info">
-                                <img src="assets/debater_yulzz.png" alt="Yulzz" class="debater-avatar">
+                                <img src="assets/IMG_7872.jpeg" alt="Yulzz" class="debater-avatar">
                                 <span class="debater-name">Yulzz</span>
                             </div>
                             <span class="debater-record">1-0</span>
@@ -203,7 +203,7 @@
                         <div class="ranking-item">
                             <span class="rank-number">4</span>
                             <div class="debater-info">
-                                <img src="assets/debater_renji.png" alt="Renji" class="debater-avatar">
+                                <img src="assets/IMG_7874.jpeg" alt="Renji" class="debater-avatar">
                                 <span class="debater-name">Renji</span>
                             </div>
                             <span class="debater-record">0-1</span>
@@ -211,7 +211,7 @@
                         <div class="ranking-item">
                             <span class="rank-number">5</span>
                             <div class="debater-info">
-                                <img src="assets/debater_kazz.png" alt="Kazz" class="debater-avatar">
+                                <img src="assets/IMG_7873.jpeg" alt="Kazz" class="debater-avatar">
                                 <span class="debater-name">Kazz</span>
                             </div>
                             <span class="debater-record">0-1</span>
