--- a/ranking.html
+++ b/ranking.html
@@ -170,7 +170,7 @@
                         <div class="ranking-item champion">
                             <span class="rank-label">K</span>
                             <div class="debater-info">
-                                <img src="assets/placeholder.png" alt="Vacant" class="debater-avatar">
+                                <img src="assets/IMG_7870.jpeg" alt="Vacant" class="debater-avatar">
                                 <span class="debater-name">VACANT</span>
                             </div>
                             <span class="debater-record">-</span>
