--- a/ranking.html
+++ b/ranking.html
@@ -19,15 +19,20 @@
                 <button class="nav-toggle" aria-label="Toggle navigation menu" aria-controls="main-nav-mobile" aria-expanded="false">
                     <i class="fas fa-bars"></i>
                 </button>
-                <a href="index.html" class="logo">DBA</a> </div>
-            <nav class="main-nav-desktop" id="main-nav-desktop"> <ul>
+                <a href="index.html" class="logo">DBA</a>
+            </div>
+            <nav class="main-nav-desktop" id="main-nav-desktop">
+                <ul>
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="archive.html" class="nav-link">Archive</a></li>
-                    <li><a href="ranking.html" class="nav-link active" aria-current="page">Ranking</a></li> <li><a href="debaters.html" class="nav-link">Debaters</a></li>
+                    <li><a href="ranking.html" class="nav-link active" aria-current="page">Ranking</a></li>
+                    <li><a href="debaters.html" class="nav-link">Debaters</a></li>
                 </ul>
             </nav>
             <div class="search-container">
-                <form action="/search" method="get" role="search"> <label for="searchInput" class="sr-only">Search Debaters</label> <input type="search" id="searchInput" class="search-input" placeholder="Search Debaters..." name="q">
+                <form action="/search" method="get" role="search">
+                    <label for="searchInput" class="sr-only">Search Debaters</label>
+                    <input type="search" id="searchInput" class="search-input" placeholder="Search Debaters..." name="q">
                     <button type="submit" id="searchButton" class="search-button" aria-label="Search">
                         <i class="fas fa-search"></i>
                     </button>
@@ -39,12 +44,14 @@
     <main class="main-content">
         <section class="ranking-section">
             <div class="section-header">
-                <h1 class="section-title">DEBATER RANKING</h1> </div>
+                <h1 class="section-title">DEBATER RANKING</h1>
+            </div>
             
             <div class="ranking-division-container">
                 <div class="division-card" role="region" aria-labelledby="high-tier-title">
                     <h2 class="division-title" id="high-tier-title">HIGH TIER DIVISION</h2>
-                    <ul class="ranking-list"> <li class="ranking-item champion">
+                    <ul class="ranking-list">
+                        <li class="ranking-item champion">
                             <span class="rank-label">K</span>
                             <div class="debater-info">
                                 <img src="assets/debater_lianx.png" alt="Foto profil Lianx" class="debater-avatar">
@@ -52,6 +59,7 @@
                             </div>
                             <span class="debater-record">1-0</span>
                         </li>
+
                         <li class="ranking-item">
                             <span class="rank-number">1</span>
                             <div class="debater-info">
@@ -60,9 +68,105 @@
                             </div>
                             <span class="debater-record">1-0</span>
                         </li>
-                        </ul>
+                        <li class="ranking-item">
+                            <span class="rank-number">2</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_aheng.png" alt="Foto profil Aheng" class="debater-avatar">
+                                <span class="debater-name">Aheng</span>
+                            </div>
+                            <span class="debater-record">1-0</span>
+                        </li>
+                        <li class="ranking-item">
+                            <span class="rank-number">3</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_adyy.png" alt="Foto profil Adyy" class="debater-avatar">
+                                <span class="debater-name">Adyy</span>
+                            </div>
+                            <span class="debater-record">1-1</span>
+                        </li>
+                        <li class="ranking-item">
+                            <span class="rank-number">4</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_zogratis.png" alt="Foto profil Zogratis" class="debater-avatar">
+                                <span class="debater-name">Zogratis</span>
+                            </div>
+                            <span class="debater-record">1-1</span>
+                        </li>
+                        <li class="ranking-item">
+                            <span class="rank-number">5</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_ryuu.png" alt="Foto profil Ryuu" class="debater-avatar">
+                                <span class="debater-name">Ryuu</span>
+                            </div>
+                            <span class="debater-record">1-1</span>
+                        </li>
+                        <li class="ranking-item">
+                            <span class="rank-number">6</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_shade.png" alt="Foto profil Shade" class="debater-avatar">
+                                <span class="debater-name">Shade</span>
+                            </div>
+                            <span class="debater-record">1-1</span>
+                        </li>
+                        <li class="ranking-item">
+                            <span class="rank-number">7</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_aryanwt.png" alt="Foto profil Aryanwt" class="debater-avatar">
+                                <span class="debater-name">Aryanwt</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </li>
+                        <li class="ranking-item">
+                            <span class="rank-number">8</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_pratama.png" alt="Foto profil Pratama" class="debater-avatar">
+                                <span class="debater-name">Pratama</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </li>
+                        <li class="ranking-item">
+                            <span class="rank-number">9</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_kyuki.png" alt="Foto profil Kyuki" class="debater-avatar">
+                                <span class="debater-name">Kyuki</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </li>
+                        <li class="ranking-item">
+                            <span class="rank-number">10</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_raju.png" alt="Foto profil Raju" class="debater-avatar">
+                                <span class="debater-name">Raju</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </li>
+                        <li class="ranking-item">
+                            <span class="rank-number">11</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_muchibei.png" alt="Foto profil Muchibei" class="debater-avatar">
+                                <span class="debater-name">Muchibei</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </li>
+                        <li class="ranking-item">
+                            <span class="rank-number">12</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_hyruki.png" alt="Foto profil Hyruki" class="debater-avatar">
+                                <span class="debater-name">Hyruki</span>
+                            </div>
+                            <span class="debater-record">0-0</span>
+                        </li>
+                        <li class="ranking-item">
+                            <span class="rank-number">13</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_kariz.png" alt="Foto profil Kariz" class="debater-avatar">
+                                <span class="debater-name">Kariz</span>
+                            </div>
+                            <span class="debater-record">0-0</span>
+                        </li>
+                    </ul>
                 </div>
-                
+
                 <div class="division-card" role="region" aria-labelledby="mid-tier-title">
                     <h2 class="division-title" id="mid-tier-title">MID TIER DIVISION</h2>
                     <ul class="ranking-list">
@@ -74,6 +178,7 @@
                             </div>
                             <span class="debater-record">-</span>
                         </li>
+
                         <li class="ranking-item">
                             <span class="rank-number">1</span>
                             <div class="debater-info">
@@ -82,7 +187,39 @@
                             </div>
                             <span class="debater-record">1-0</span>
                         </li>
-                        </ul>
+                        <li class="ranking-item">
+                            <span class="rank-number">2</span>
+                            <div class="debater-info">
+                                <img src="assets/IMG_7176.jpeg" alt="Foto profil Hiroo" class="debater-avatar">
+                                <span class="debater-name">Hiroo</span>
+                            </div>
+                            <span class="debater-record">1-0</span>
+                        </li>
+                        <li class="ranking-item">
+                            <span class="rank-number">3</span>
+                            <div class="debater-info">
+                                <img src="assets/IMG_7872.jpeg" alt="Foto profil Yulzz" class="debater-avatar">
+                                <span class="debater-name">Yulzz</span>
+                            </div>
+                            <span class="debater-record">1-0</span>
+                        </li>
+                        <li class="ranking-item">
+                            <span class="rank-number">4</span>
+                            <div class="debater-info">
+                                <img src="assets/IMG_7874.jpeg" alt="Foto profil Renji" class="debater-avatar">
+                                <span class="debater-name">Renji</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </li>
+                        <li class="ranking-item">
+                            <span class="rank-number">5</span>
+                            <div class="debater-info">
+                                <img src="assets/IMG_7873.jpeg" alt="Foto profil Kazz" class="debater-avatar">
+                                <span class="debater-name">Kazz</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="division-card" role="region" aria-labelledby="low-tier-title">
@@ -96,6 +233,7 @@
                             </div>
                             <span class="debater-record">-</span>
                         </li>
+
                         <li class="ranking-item">
                             <span class="rank-number">1</span>
                             <div class="debater-info">
